--- a/topics.html
+++ b/topics.html
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td>08</td>
-                <td><a href="cssjs.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></td>
+                <td><a href="topic8.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
