--- a/cssjs.html
+++ b/cssjs.html
@@ -6,16 +6,44 @@
         <link rel="stylesheet" type="text/css" href="cssjs.css">
       
     </head>
+    <style>
+body{
+  background-color: #8A2BE2;
+
+}
+div#box1 {
+  background: #9DCEFF;
+  width: 800px;
+  height: 400px;
+  text-align: center;
+  margin: auto;
+    width: 60%;
+    border: 10px solid #73AD21;
+    padding: 10px;
+}
+</style>
+<script>
+function changeBG(el,clr){
+  var elem = document.getElementById(el);
+  elem.style.transition = "background 1.0s linear 0s";
+  elem.style.background = clr;
+}
+</script>
   <body>
         	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
- 
+ <button onclick="changeBG('box1','  #FAEBD7')">AntiqueWhite </button>
+  <button onclick="changeBG('box1','#000000')">Black</button>
+  <button onclick="changeBG('box1','#0000FF')">Blue</button>
+  <button onclick="changeBG('box1','#0C0')">Green</button>
+  <button onclick="changeBG('box1','#9DCEFF')">Back to initial color</button>
+  <div id="box1"><strong>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</strong></div>
     
 <h2>
-      Back to Topics
-      <a href="topics.html">CLICK ME</a>
-    </h2>
+      Back to Topic links
+      <a href="topics.html">Click here</a>
+</h2>
     <div class="tuna"></div>
+      <h3>Slow motion...</h3>
 
-<h3>RUN MY FRIEND...</h3>
    </body>
 </html>
