--- a/cssjs.html
+++ b/cssjs.html
@@ -18,7 +18,7 @@ div#box1 {
   text-align: center;
   margin: auto;
     width: 60%;
-    border: 10px solid #73AD21;
+    border: 10px solid #FFFFFF;
     padding: 10px;
 }
 </style>
