--- a/cssjs.html
+++ b/cssjs.html
@@ -31,6 +31,7 @@ function changeBG(el,clr){
 </script>
   <body>
         	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
+          <h3>Click the buttons below to change the colors</h3>
  <button onclick="changeBG('box1','  #FAEBD7')">AntiqueWhite </button>
   <button onclick="changeBG('box1','#000000')">Black</button>
   <button onclick="changeBG('box1','#0000FF')">Blue</button>
