--- a/cssjs.html
+++ b/cssjs.html
@@ -37,7 +37,7 @@ function changeBG(el,clr){
   <button onclick="changeBG('box1','#0000FF')">Blue</button>
   <button onclick="changeBG('box1','#0C0')">Green</button>
   <button onclick="changeBG('box1','#9DCEFF')">Back to initial color</button>
-  <div id="box1"><strong>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</strong></div>
+  <div id="box1"><strong>Don't forget to bring me back to my original COLOR</strong></div>
     
 <h2>
       Back to Topic links
