--- a/topics.html
+++ b/topics.html
@@ -57,12 +57,12 @@
             <tr>
                 <td>07</td>
                 <td><a href="manipulating.html">Manipulating CSS Class Properties Using JavaScript</a></td>
-                <td>Not Yet</td>
+                <td>Yes</td>
             </tr>
             <tr>
                 <td>08</td>
                 <td><a href="cssjs.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></td>
-                <td>Not Yet</td>
+                <td>Yes</td>
             </tr>
             <tr>
                 <td>09</td>
@@ -72,7 +72,7 @@
             <tr>
                 <td>10</td>
                 <td><a href="topic10.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
-                <td>Not Yet</td>
+                <td>Yes</td>
             </tr>
             <tr>
                 <td>11</td>
