--- a/topicscombine1.html
+++ b/topicscombine1.html
@@ -4,6 +4,14 @@
 	<link rel="stylesheet" type="text/css" href="topicscombine.css">
 	<title>CombineTopics</title>
 	<h1 id="hd">In this page you will see css animation, transition and transform combine together</h1>
+	<h2>Kind of animatiuons
+	<ol>
+		<li>Background color change</li>
+		<li>A Transition Animation</li>
+		<li>A Transform Animation</li>
+	</ol>
+	</h2>
+	
 </head>
 <body>
 
