--- a/topicscombine1.html
+++ b/topicscombine1.html
@@ -4,11 +4,11 @@
 	<link rel="stylesheet" type="text/css" href="topicscombine.css">
 	<title>CombineTopics</title>
 	<h1 id="hd">In this page you will see css animation, transition and transform combine together</h1>
-	<h2>Kind of animatiuons
+	<h2>
 	<ol>
-		<li>Background color change</li>
-		<li>A Transition Animation</li>
-		<li>A Transform Animation</li>
+		<li>Animation</li>
+		<li>Transition</li>
+		<li>Transform</li>
 	</ol>
 	</h2>
 	
