--- a/topics.html
+++ b/topics.html
@@ -76,17 +76,17 @@
             </tr>
             <tr>
                 <td>11</td>
-                <td><a href="csstransitions.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
+                <td><a href="landing.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
                 <td>In Progress</td>
             </tr>
             <tr>
                 <td>12</td>
-                <td><a href="transform.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
+                <td><a href="landing.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
                 <td>In Progress</td>
             </tr>
             <tr>
                 <td>13</td>
-                <td><a href="cssanimations.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
+                <td><a href="landing.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
                 <td>In Progress</td>
             </tr>
             <tr>
