--- a/landing.html
+++ b/landing.html
@@ -22,5 +22,6 @@
   </h2>
   </div>
   <a href="#" class="btn">Hover Me!!!</a>
+ <h3><a href="topics.html"> Back to Topics Page:</a></h3>
 </body>
 </html>
