--- a/landing.html
+++ b/landing.html
@@ -21,7 +21,7 @@
   </ul>
   </h2>
   </div>
-  <a href="#" class="btn">Hover Me!!!</a>
+  <a href="#" class="btn"><a href="topics.html"> Back to Topics Page:</a></a>
  <h3><a href="topics.html"> Back to Topics Page:</a></h3>
 </body>
 </html>
