--- a/landing.html
+++ b/landing.html
@@ -21,7 +21,6 @@
   </ul>
   </h2>
   </div>
-  <a href="#" class="btn"><a href="topics.html"> Back to Topics Page:</a></a>
- <h3><a href="topics.html"> Back to Topics Page:</a></h3>
+  <a href="topics.html" class="btn">Back to Topics Page:</a>
 </body>
 </html>
