--- a/topics.html
+++ b/topics.html
@@ -26,7 +26,7 @@
         <tbody>
             <tr>
                 <td>01</td>
-                <td><a href="array.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
+                <td><a href="topic1.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
