--- a/topic1.html
+++ b/topic1.html
@@ -47,7 +47,8 @@
             </tr>
         </table>
         <br>
-        <button type="button" onclick="favoriteSelections()">Submit</button></br><button type="button" onclick="window.location.href='topics.html'">Back to Topics links</button>
+        <button type="button" onclick="favoriteSelections()">Submit</button></br>
+        <button type="button" onclick="window.location.href='topics.html'">Back to Topics links</button>
         <div id = "associativeArray"></div>
         <p>&nbsp;</p><p>&nbsp;</p>
         </div>
