--- a/topic1.html
+++ b/topic1.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="topic1.css">
 </head>
 <body>
-	<h1>Topic # 1</h1>
+	<h1>Topic # 1: JavaScript - Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</h1>
 <div class="row">
 	<div class="column" style="background-color:#aaa;">
   
