--- a/topics.html
+++ b/topics.html
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td>03</td>
-                <td><a href="test.html">JSON Parse, Stringify</a></td>
+                <td><a href="topic3.html">JSON Parse, Stringify</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
@@ -51,7 +51,7 @@
             </tr>
             <tr>
                 <td>06</td>
-                <td><a href="06.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
+                <td><a href="topic6.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
