--- a/topics.html
+++ b/topics.html
@@ -66,7 +66,7 @@
             </tr>
             <tr>
                 <td>09</td>
-                <td><a href="09.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
+                <td><a href="topic9.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
