--- a/topics.html
+++ b/topics.html
@@ -46,7 +46,7 @@
             </tr>
             <tr>
                 <td>05</td>
-                <td><a href="localstorage.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
+                <td><a href="topic5.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
