--- a/topics.html
+++ b/topics.html
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td>04</td>
-                <td><a href="04.html">AJAX requesting a JSON file</a></td>
+                <td><a href="topic4.html">AJAX requesting a JSON file</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
