--- a/topic4.html
+++ b/topic4.html
@@ -10,6 +10,7 @@
 	<header>
 		<h1>AJAX - Using XMLHTTPRequest to Consume a JSON Web Service</h1>
 		<button id="btn">Find Info for 3 New Animamls by clicking this button</button>
+		 <button type="button" onclick="window.location.href='topics.html'">Back to Topics links</button>
 	</header>
 	<div id="animal-info"></div>
 
