--- a/weather-master/Weather/index.html
+++ b/weather-master/Weather/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-2.1.4.min.js" ></script>
 		<script src="js/script.js" ></script>	
-		<img src="images/bg1.jpg"
+		<img src="images/tp.gif"
 				style="width:100%;height:100%;position:absolute;top:0;left:0;z-index:-5000;">
 	
 	</head> 
@@ -14,7 +14,7 @@
 	
 		<div class="header">
 			
-			<a class="button" href="Weather/topics.html">Home</a>
+			<a class="button" href="index.html">Home</a>
 			
 			<select id = "select">
 				<option style="color:gray" value="null">------select one option-------</option>
