--- a/topics.html
+++ b/topics.html
@@ -91,7 +91,7 @@
             </tr>
             <tr>
                 <td>14</td>
-                <td><a href="webapp.html">Individual Project</a></td>
+                <td><a href="/weather-master/Weather/index.html">Individual Project</a></td>
                 <td>Not Yet</td>
             </tr>
             <h1><a href="index.html"> Back to Home Page:</a></h1>
