--- a/weather-master/Weather/index.html
+++ b/weather-master/Weather/index.html
@@ -4,8 +4,14 @@
 		<title>Weather</title>
 		
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src="http://code.jquery.com/jquery-2.1.4.min.js" ></script>
-		<script src="js/script.js" ></script>	
+		<!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js" ></script> -->
+		<script
+			 src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+ 			 crossorigin="anonymous">
+ 	
+ 		</script>
+ 		
+		<script src="/weather-master/Weather/js/script.js" ></script>	
 		<img src="images/tp.gif"
 				style="width:100%;height:100%;position:absolute;top:0;left:0;z-index:-5000;">
 	
