--- a/weather-master/Weather/index.html
+++ b/weather-master/Weather/index.html
@@ -20,7 +20,7 @@
 	
 		<div class="header">
 			
-			<a class="button" href="index.html">Home</a>
+			<a class="button" href="https://rudyravelin1.github.io/topics.html">Home</a>
 			
 			<select id = "select">
 				<option style="color:gray" value="null">------select one option-------</option>
